added quick frontend for testing
